# rrdata

./: README.md  git_pull_force.sh  git_push.sh  pyproject.toml  requirements.txt  start_streamlit.sh  test.csv  test2.csv
async/: async_sql_demo.py  demo1.py  engine_asyncpg.py  get_data_tspro_thread.py  multi_crawl_test.py  multi_python.py  mutil_crawl_queue.py  save_data_to_sql_asyncpg.py  save_stock_day_asyncpg.py  test_mult.py  thread_qeuqe_demo.py  thread_queue_tspro_api.py  thread_stock_day_tspro.py
examples/: save_stock_data.ipynb  stock.ipynb
rrdata/: TODO.md  __init__.py  rrdata_init.py
rrdata/common/: __init__.py  engine_pgsql.py  get_update_tradedate.py  optimiz_df_sql_tmpfile.py  read_data_from_table.py  read_df_from_table.py  save_df_to_pgsql.py  tusharepro.py  updtae_sqltable_from_df.py
rrdata/rqalpha/: stock_RS_OH_MA.py
rrdata/rrdatac/: __init__.py  rrdataD_read_api.py
rrdata/rrdatad/: README.md  __init__.py  instrument_code_name.py  record_data_cronly.py  rrdataD_save_api.py
rrdata/temp/: __init__.py  asyncpg_demo1.py  consts.py  dataSource_class.py  fetch_stock_fudamental_ts.py  stock_zh_a_sina.py  test_diff.py
rrdata/tushare_client/: base.py  stock_adj_factor.py  stock_basic.py  stock_calendar.py  stock_daily.py  utils.py  (+2 more)
rrdatad/: README.md  __init__.py
tests/: logging_test.py  pgsql_alchemy_demo1.py  pgsql_alchemy_insert.py  pysnowball_demo.py  save_df_to_pgsql.py  sw_inde_demo.py  sw_index_demo 1.py  sw_index_demo.py  test_pgsql_copy.py  test_upsert_method_pgsql.py  trade_date_sina.py
tmp/: rrsdk-init.py  tushare_datafeed.py
(+80 files in other folders)
