[tool.poetry]
name = "rrdata"
version = "0.2.2"
description = ""
authors = ["romepeng <romepeng@outlook.com>"]
readme = "README.md"

repository =  "https://github.com/romepeng/rrdata.git"
#config = "git@github.com:romepeng/.rrsdk.git"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
